kubernete user-api fix

--- a/K8/deployments/user-db-deployment.yaml
+++ b/K8/deployments/user-db-deployment.yaml
@@ -37,7 +37,12 @@ spec:
           volumeMounts:
             - name: postgres-persistent-storage
               mountPath: /var/lib/postgresql/data
+            - name: initdb-volume
+              mountPath: /docker-entrypoint-initdb.d
       volumes:
         - name: postgres-persistent-storage
           persistentVolumeClaim:
             claimName: user-db-pvc
+        - name: initdb-volume
+          configMap:
+            name: user-api-initdb
