--- a/K8/deployments/user-db-deployment.yaml
+++ b/K8/deployments/user-db-deployment.yaml
@@ -1,10 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: user-db
   labels:
     app: user-db
 spec:
+  serviceName: "user-db"
+  replicas: 1
   selector:
     matchLabels:
       app: user-db
@@ -24,19 +26,23 @@ spec:
                 secretKeyRef:
                   name: user-db-secret
                   key: POSTGRES_USER
+            
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: user-db-secret
                   key: POSTGRES_PASSWORD
+            
             - name: POSTGRES_DB
               valueFrom:
-                secretKeyRef:
-                  name: user-db-secret
+                configMapKeyRef:
+                  name: user-api-config
                   key: POSTGRES_DB
+          
           volumeMounts:
             - name: postgres-persistent-storage
               mountPath: /var/lib/postgresql/data
+      
       volumes:
         - name: postgres-persistent-storage
           persistentVolumeClaim:
