--- a/K8/secrets/artist-db-secret.yaml
+++ b/K8/secrets/artist-db-secret.yaml
@@ -4,6 +4,5 @@ metadata:
   name: artist-db-secret
 type: Opaque
 stringData:
-  DB_USER: root
-  DB_PASS: aspire
-  DB_NAME: ut2artist
+  DB_USER: user
+  DB_PASS: password
