--- a/K8/secrets/playlist-api-secret.yaml
+++ b/K8/secrets/playlist-api-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: playlist-db-secret
 type: Opaque
 stringData:
-  MONGO_USER: nacho
-  MONGO_PASSWORD: "12345"
+  MONGO_USER: user
+  MONGO_PASSWORD: password
