--- a/K8/secrets/user-db-secret.yaml
+++ b/K8/secrets/user-db-secret.yaml
@@ -4,6 +4,5 @@ metadata:
   name: user-db-secret
 type: Opaque
 stringData:
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: admin
-  POSTGRES_DB: usersdb
+  POSTGRES_USER: user
+  POSTGRES_PASSWORD: password
