--- a/K8/deployments/user-api-deployment.yaml
+++ b/K8/deployments/user-api-deployment.yaml
@@ -33,8 +33,8 @@ spec:
                   key: POSTGRES_PASSWORD
             - name: POSTGRES_DB
               valueFrom:
-                secretKeyRef:
-                  name: user-db-secret
+                configMapKeyRef:
+                  name: user-api-config
                   key: POSTGRES_DB
             - name: POSTGRES_HOST
               valueFrom:
@@ -46,18 +46,4 @@ spec:
                 configMapKeyRef:
                   name: user-api-config
                   key: POSTGRES_PORT
-            # Keycloak
-            - name: KEYCLOAK_ISSUER
-              value: "http://keycloak:8081/realms/demo-realm"
-            - name: KEYCLOAK_URL
-              value: "http://keycloak:8081/"
-            - name: KEYCLOAK_REALM
-              value: "demo-realm"
-            - name: KEYCLOAK_CLIENT_ID
-              value: "demo-client"
-            - name: KEYCLOAK_CLIENT_SECRET
-              value: "GZUa2kQFL3racxYSPLPUqyuiEKqdIlCh"
-            - name: KEYCLOAK_AUDIENCE
-              value: "http://localhost:8081/realms/demo-realm"
-            - name: KEYCLOAK_PORT
-              value: "8081"
+           
