--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -3,12 +3,14 @@ events {
 }
 
 http {
+    resolver 10.96.0.10;  # IP de CoreDNS
+
     server {
         listen 80;
 
         # Artist API
         location /artistapi/ {
-            proxy_pass http://artist-api:8080;
+            proxy_pass http://artist-api:8080/;;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -20,7 +22,7 @@ http {
             proxy_pass http://user-api:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
@@ -31,6 +33,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Catch-all para / 
+        location / {
+            return 200 'API Gateway is running';
+            add_header Content-Type text/plain;
         }
     }
 }
